# fifo-dev-perception

./: README.md  pyproject.toml
.github/workflows/: copilot-setup-steps.yml  test.yml
fifo_dev_perception/speech/: README.md  fifo_speech.py
tests/: conftest.py  test_fifo_speech.py
